--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -3,8 +3,8 @@ title: young boys fc vs tesa fc
 home: young boys fc
 away: tesa fc
 competition: football, friendly match
-date: 08-03-2022
+date: 08-03-2022, "16:00 WIB"
 place: stadion desa maleber
 status: done
-result: 2:2
+result: "2:2"
 ---
