--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -3,8 +3,8 @@ title: tesa fc vs cikananga fc
 home: tesa fc
 away: cikananga fc
 competition: futsal, friendly match
-date: 12-03-2022
+date: "12 Maret 2022, 16:00 WIB"
 place: tiga bintang tambak baya
 status: done
-result: 8:6
+result: "8:6"
 ---
