--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -3,7 +3,7 @@ title: young boys fc vs tesa fc
 home: young boys fc
 away: tesa fc
 competition: football, friendly match
-date: "08 maret 2022, 16:00 WIB"
+date: 08-03-2022 16:00
 place: stadion desa maleber
 status: done
 result: "2:2"
