--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -3,7 +3,7 @@ title: tesa fc vs cikananga fc
 home: tesa fc
 away: cikananga fc
 competition: futsal, friendly match
-date: "12 Maret 2022, 16:00 WIB"
+date: 12-03-2022, 16:00
 place: tiga bintang tambak baya
 status: done
 result: "8:6"
