--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -4,7 +4,7 @@ title: ciomas fc vs tesa fc
 home: ciomas fc
 away: tesa fc
 competition: football friendly match
-date: 17-03-2022
+date: 17-03-2022 14:00
 place: stadion desa ciomas
 status: upcoming
 result: false
