--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -3,7 +3,7 @@ season: 2022
 title: ciomas fc vs tesa fc
 home: ciomas fc
 away: tesa fc
-competition: football friendly match
+competition: football, friendly match
 date: 17-03-2022 14:00
 place: stadion desa ciomas
 status: upcoming
