--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -2,7 +2,8 @@
 title: young boys fc vs tesa fc
 home: young boys fc
 away: tesa fc
-competition: football, friendly match
+competition: friendly match
+type: football
 date: 08-03-2022 16:00
 place: stadion desa maleber
 status: done
