--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -1,8 +1,10 @@
 ---
+season: 2022
 title: tesa fc vs cikananga fc
 home: tesa fc
 away: cikananga fc
-competition: futsal, friendly match
+competition: friendly match
+type: futsal
 date: 12-03-2022, 16:00
 place: tiga bintang tambak baya
 status: done
