--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -7,6 +7,6 @@ competition: friendly match
 type: football
 date: 17-03-2022 14:00
 place: stadion desa ciomas
-status: false
+status: done
 result: false
 ---
