--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -6,6 +6,6 @@ competition: friendly match
 type: football
 date: 08-03-2022 16:00
 place: stadion desa maleber
-status: done
+status: last match
 result: "2:2"
 ---
