--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -5,8 +5,8 @@ home: tesa fc
 away: cikananga fc
 competition: friendly match
 type: futsal
-date: 12-03-2022, 16:00
+date: sabtu 12-03-2022, 16:00
 place: tiga bintang tambak baya
-status: done
+status: last match
 result: "8:6"
 ---
