--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -2,7 +2,9 @@
 season: 2022
 title: ciomas fc vs tesa fc
 home: ciomas fc
+  logo: /assets/img/logo-1-new.svg
 away: tesa fc
+  logo: /assets/img/logo-2-new.svg
 competition: friendly match
 type: football
 date: 17-03-2022 15:30
