--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -1,9 +1,11 @@
 ---
 season: 2022
 title: ciomas fc vs tesa fc
-home: ciomas fc
+home:
+  name: ciomas fc
   logo: /assets/img/logo-1-new.svg
-away: tesa fc
+away:
+  name: tesa fc
   logo: /assets/img/logo-2-new.svg
 competition: friendly match
 type: football
