--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -1,7 +1,11 @@
 ---
-title: young boys fc vs tesa fc
-home: young boys fc
-away: tesa fc
+title: young boys vs tesa fc
+home:
+  name: young boys
+  logo: 
+away:
+  name: tesa fc
+  logo: /assets/img/logo-1-new.svg
 competition: friendly match
 type: football
 date: 08-03-2022 16:00
