--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -1,8 +1,12 @@
 ---
 season: 2022
 title: tesa fc vs cikananga fc
-home: tesa fc
-away: cikananga fc
+home:
+  name: tesa fc
+  logo: /assets/img/logo-1-new.svg
+away:
+  name: cikananga fc
+  logo: 
 competition: friendly match
 type: futsal
 date: sabtu 12-03-2022, 16:00
