--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -1,9 +1,9 @@
 ---
 season: 2022
-title: ciomas fc vs tesa fc
+title: chibeunghar fc vs tesa fc
 home:
-  name: ciomas fc
-  logo: /assets/img/logo-1-new.svg
+  name: chibeunghar fc
+  logo: /assets/img/logo/chibeungharfc.png
 away:
   name: tesa fc
   logo: /assets/img/logo-2-new.svg
