--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -10,7 +10,7 @@ away:
 competition: friendly match
 type: football
 date: 17-03-2022 15:30
-place: stadion desa ciomas
+place: stadion jagabaya, desa ciomas
 status: next match
 result: false
 ---
