--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -3,10 +3,10 @@ season: 2022
 title: chibeunghar fc vs tesa fc
 home:
   name: chibeunghar fc
-  logo: /assets/img/logo/chibeungharfc.png
+  logo: /assets/img/logo/chibeungharfc.svg
 away:
   name: tesa fc
-  logo: /assets/img/logo-2-new.svg
+  logo: /assets/img/logo-1-new.svg
 competition: friendly match
 type: football
 date: 17-03-2022 15:30
