--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -11,6 +11,6 @@ competition: friendly match
 type: football
 date: 17-03-2022 15:30
 place: stadion jagabaya, desa ciomas
-status: next match
+status: last match
 result: nil
 ---
