--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -12,5 +12,5 @@ type: futsal
 date: sabtu 12-03-2022, 16:00
 place: tiga bintang tambak baya
 status: last match
-result: "8:6"
+result: "8-6"
 ---
