--- a/_matches/12-03-2022.md
+++ b/_matches/12-03-2022.md
@@ -9,7 +9,7 @@ away:
   logo: 
 competition: friendly match
 type: futsal
-date: sabtu 12-03-2022, 16:00
+kickoff: "sabtu 12-03-2022, 16:00"
 place: tiga bintang tambak baya
 status: last match
 result: "8-6"
