--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -8,7 +8,7 @@ away:
   logo: /assets/img/logo-1-new.svg
 competition: friendly match
 type: football
-date: 08-03-2022 16:00
+kickoff: "08-03-2022 16:00"
 place: stadion desa maleber
 status: last match
 result: "2-2"
