Update and rename vs-cikananga.md to 12-08-2022.md

--- a/_matches/12-08-2022.md
+++ b/_matches/12-08-2022.md
@@ -11,7 +11,7 @@ away:
 competition: friendly match
 type: futsal
 kickoff: "sabtu, 12 maret 2022 • 16:00 wib"
-place: tiga bintang tambak baya
+place: tiga bintang, tambak baya
 status: last match
 result: "8-6"
 ---
