--- a/_matches/12-08-2022.md
+++ b/_matches/12-08-2022.md
@@ -1,12 +1,12 @@
 ---
 order: 2
 season: 2022
-title: tesa fc vs cikananga fc
+title: tesa fc vs cikananga
 home:
   name: tesa fc
   logo: /assets/img/logo-1-new.svg
 away:
-  name: cikananga fc
+  name: cikananga
   logo: 
 competition: friendly match
 type: futsal
