--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -1,10 +1,10 @@
 ---
 order: 3
 season: 2022
-title: chibeunghar fc vs tesa fc
+title: chibeunghar vs tesa fc
 image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-AvlbpcgLaeEk3WHumXwQ-sA&usqp=CAU
 home:
-  name: chibeunghar fc
+  name: chibeunghar
   logo: /assets/img/logo/chibeungharfc.svg
 away:
   name: tesa fc
