--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -75,5 +75,19 @@ goal:
   away:
     - name: danil ardiansyah
       time: 35
-result: "3-1"
+result:
+  status: full time
+  conclusion: defeat
+  score: "3-1"
+  goal: 
+    home:
+      - name: unknown
+        time: 19
+      - name: unknown
+        time: 58
+      - name: unknown
+        time: 76
+    away:
+      - name: danil ardiansyah
+        time: 35
 ---
