--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -13,7 +13,20 @@ type: football
 kickoff: "selasa, 08 maret 2022 • 16:00 wib"
 place: stadion desa maleber
 status: last match
-result: "2-2"
+result: 
+  status: full time
+  conclusion: draw
+  goal:
+    home:
+      - name: unknown
+        time: 24
+      - name: unknown
+        time: 68
+    away:
+      - name: haji
+        time: 32
+      - name: habiel
+        time: 80
 goal:
   home:
     - name: unknown
