--- a/_matches/12-08-2022.md
+++ b/_matches/12-08-2022.md
@@ -13,5 +13,8 @@ type: futsal
 kickoff: "sabtu, 12 maret 2022 • 16:00 wib"
 place: tiga bintang, tambak baya
 status: last match
-result: "8-6"
+result:
+  status: full time
+  conclusion: win
+  goal: 
 ---
