--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -35,15 +35,16 @@ lineup:
   - name: lalan
     no-punggung: 14
     position: cmf
-  - name: a.mansyur
-    no-punggung: 7
-    position: cf
   - name: habiel
     no-punggung: 69
     position: lwf
   - name: danil ardiansyah
     no-punggung: 8
     position: rwf
+  - name: a.mansyur
+    no-punggung: 7
+    position: cf
+    role: captain
 subs:
   - name: farhan husaini
     no-punggung: 1
