--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -61,7 +61,7 @@ subs:
 competition: friendly match
 type: football 
 kickoff: "kamis, 24 maret 2022 • 15:30 wib"
-place: lapangan samundaka, desa maleber
+place: stadion samundaka, desa maleber
 status: next match
 result:
   status: next match
