--- a/_matches/19-03-2022.md
+++ b/_matches/19-03-2022.md
@@ -14,16 +14,16 @@ lineup:
     position: gk
   - name: raka
     no-punggung: 13
-    position: 
+    position: cb
   - name: faisal
     no-punggung: 24
-    position: 
+    position: rw
   - name: m.aji pangestu
     no-punggung: 19
-    position: 
+    position: lw
   - name: danil ardiansyah
     no-punggung: 8
-    position: rb
+    position: cf
 subs:
   - name: lalan
     no-punggung: 14
