--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -10,7 +10,7 @@ away:
   name: tesa fc
   logo: /assets/img/logo-1-new.svg
 lineup-img: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3jXq0gzpnLc4bBAE_icBzU6q1nLlgZAmfXg&usqp=CAU
-lineup-image: /assets/img/pp/raka.jpg
+lineup-image: /assets/img/fg-lalan.png
 lineup:
   - name: aldo
     no-punggung: 23
