--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -2,7 +2,7 @@
 order: 5
 season: 2022
 title: gempa fc vs tesa fc
-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-AvlbpcgLaeEk3WHumXwQ-sA&usqp=CAU
+image: /assets/img/fg-japra.jpg
 home:
   name: gempa fc
   logo: /assets/img/logo/gempafc-2.svg
