--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -59,6 +59,8 @@ subs:
     no-punggung: 19
   - name: m.gibran
     no-punggung: 11
+  - name: jafar
+    no-punggung: 4
 competition: friendly match
 type: football 
 kickoff: "kamis, 24 maret 2022 • 15:30 wib"
