--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -15,6 +15,7 @@ lineup:
   - name: aldo
     no-punggung: 23
     position: gk
+    role: gk
   - name: angga nugraha
     no-punggung: 9
     position: cb
@@ -30,7 +31,7 @@ lineup:
   - name: m.ropick
     no-punggung: 7
     position: dmf
-    role: captain
+    role: c
   - name: hgialfhri
     no-punggung: 10
     position: cmf
