--- a/_matches/19-03-2022.md
+++ b/_matches/19-03-2022.md
@@ -15,6 +15,7 @@ lineup:
   - name: raka
     no-punggung: 13
     position: cb
+    role: c
   - name: faisal
     no-punggung: 24
     position: rw
