--- a/_matches/17-03-2022.md
+++ b/_matches/17-03-2022.md
@@ -17,6 +17,7 @@ lineup:
   - name: angga nugraha
     no-punggung: 9
     position: cb
+    role: c
   - name: fahri husaini
     no-punggung: 3
     position: cb
