--- a/_matches/24-03-2022.md
+++ b/_matches/24-03-2022.md
@@ -65,11 +65,11 @@ competition: friendly match
 type: football 
 kickoff: "kamis, 24 maret 2022 • 15:30 wib"
 place: stadion samundaka, desa maleber
-status: next match
+status: last match
 result:
-  status: next match
-  conclusion: 
-  score: ""
+  status: full time
+  conclusion: draw
+  score: "0-0"
   goal: 
     home:
     away:
