--- a/_matches/08-03-2022.md
+++ b/_matches/08-03-2022.md
@@ -11,7 +11,7 @@ away:
 competition: friendly match
 type: football
 kickoff: "selasa, 08 maret 2022 • 16:00 wib"
-place: stadion desa maleber
+place: stadion samundaka, desa maleber
 status: last match
 result: 
   status: full time
@@ -28,15 +28,4 @@ result:
         time: 32
       - name: habiel
         time: 80
-goal:
-  home:
-    - name: unknown
-      time: 24
-    - name: hamba Allah
-      time: 68
-  away:
-    - name: haji
-      time: 32
-    - name: habiel
-      time: 80
 ---
