--- a/_matches/26-03-2022.md
+++ b/_matches/26-03-2022.md
@@ -8,7 +8,7 @@ home:
 away:
   name: bantara auto
   logo: 
-image: 
+image: /assets/img/fg-habiel.jpg
 lineup-image: 
 lineup:
   - name: farhan husaini
