--- a/_matches/26-03-2022.md
+++ b/_matches/26-03-2022.md
@@ -48,9 +48,9 @@ competition: friendly match
 type: futsal
 kickoff: "sabtu, 26 maret 2022 • 16:00 wib"
 place: tiga bintang, tambak baya
-status: next match
+status: last match
 result:
-  status: next match
+  status: full time
   conclusion: 
   score: "15-4"
   goal: 
