--- a/_matches/01-04-2022.md
+++ b/_matches/01-04-2022.md
@@ -6,7 +6,7 @@ home:
   name: tesa fc
   logo: /assets/img/logo-1-new.svg
 away:
-  name: bantara auto
+  name: keramat wangi
   logo:
 competition: friendly match
 type: futsal
