--- a/_matches/01-04-2022.md
+++ b/_matches/01-04-2022.md
@@ -10,7 +10,7 @@ away:
   logo:
 competition: friendly match
 type: futsal
-kickoff: "jumat, april 2022 • 16:00 wib"
+kickoff: "jumat,01 april 2022 • 16:00 wib"
 place: tiga bintang, tambak baya
 status: last match
 result:
