--- a/_matches/24-05-2022.md
+++ b/_matches/24-05-2022.md
@@ -60,4 +60,5 @@ competition: friendly match
 type: football
 kickoff: "jumat, 20 mei 2022 • 16:00 wib"
 place: lapang sepakbola, kutaraja
-status: last match
+status: next match
+---
