--- a/_matches/24-05-2022.md
+++ b/_matches/24-05-2022.md
@@ -1,15 +1,15 @@
 ---
 order: 19
 season: 2022
-title: tesa fc vs karangsari fc (ledug)
-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNG2OKz-GHQ6gkP99LzDfFbUsD-7uaYkmMFw&usqp=CAU
+title: tesa fc vs karangsari fc
+image: https://mir-s3-cdn-cf.behance.net/project_modules/disp/21a630103399045.5f609af32e4c6.png
 home:
   name: tesa fc
   logo: /assets/img/logo/logo-1_v2_stroke-white_bg-black.svg
 away:
-  name: karangsari fc
+  name: karangsari fc (ledug)
   logo:
-lineup-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNG2OKz-GHQ6gkP99LzDfFbUsD-7uaYkmMFw&usqp=CAU
+lineup-image: https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/ffff2e103399045.5f5e058dd7dba.png
 lineup:
   - name: aldo
     no-punggung: 23
@@ -17,15 +17,14 @@ lineup:
   - name: angga nugraha
     no-punggung: 9
     position: cb
-    role: c
-  - name: g.pratama
-    no-punggung: 22
+  - name: fahri husaini
+    no-punggung: 3
     position: cb
   - name: hantu laut
     no-punggung: 48
     position: rb
-  - name: farhan akbar
-    no-punggung: 1
+  - name: g.pratama
+    no-punggung: 22
     position: lb
   - name: maulana
     no-punggung: 15
@@ -36,6 +35,7 @@ lineup:
   - name: m.ropick
     no-punggung: 7
     position: cmf
+    role: c
   - name: habiel
     no-punggung: 69
     position: rwf
@@ -56,9 +56,19 @@ subs:
     no-punggung: 24
   - name: yasya
     no-punggung: 19
+  - name: farhan husaini
+    no-punggung: 1
+  - name: ozan
+    no-punggung: 18
+  - name: pandu
+    no-punggung: 25
+  - name: a.mansyur
+    no-punggung: 7
+  - name: azriel
+    no-punggung: 0
 competition: friendly match
 type: football
-kickoff: "jumat, 20 mei 2022 • 16:00 wib"
-place: lapang sepakbola, kutaraja
+kickoff: "selasa, 24 mei 2022 • 16:00 wib"
+place: lapangan sepakbola, kutaraja
 status: next match
 ---
